--- a/index.html
+++ b/index.html
@@ -371,19 +371,17 @@
 					<span>電話：6532 8821</span><br>
 					<span>電郵：info@prowayst.com</span>
 				</div>
-
+	
 				<div class="col-md-4 agile-footer-grid">
-					<span><b>星期二至日</b> 09:00 - 18:00</span>
-					<br><br>
-					<span><b>星期一</b> 休息</span>
-					<br><br>
+					<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+					<span><b>星期一</b> 休息</span><br>
 					<span><b>敬請預約</b></span>
 				</div>
-
+	
 				<div class="videos col-md-2 agile-footer-grid">
-
+	
 				</div>
-
+	
 				<div class="clearfix"> </div>
 			</div>
 		</div>
