--- a/our-services/enhancement.html
+++ b/our-services/enhancement.html
@@ -142,7 +142,7 @@
 
 			<div>
 				<br>
-				<p><img src="../images/o3_1.png"> <b id="treatment3">講故事技巧躍升班</b><br><br>
+				<p><h4><img src="../images/o3_1.png"> <b id="treatment3">講故事技巧躍升班</b></h4><br>
 
 					🌟 ⾔語治療師規劃及教授🌟<br><br>
 
@@ -163,11 +163,11 @@
 					🔶 每次課後均會和家長傾談當節重點及跟進⽅向
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/講故事技巧躍升班"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講故事技巧躍升班"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><img src="../images/o3_2.png"> <b id="treatment5">⼀對⼀兒童為本遊戲輔導</b><br><br>
+				<p><h4><img src="../images/o3_2.png"> <b id="treatment5">⼀對⼀兒童為本遊戲輔導</b></h4><br>
 
 					你和我⼩時候都喜歡玩，長⼤後卻忘記了遊戲正正是兒童表達⾃⼰最⾃然的渠道；當感到被明⽩和接納，兒童就能重新看⾒⾃⼰的能⼒。輔導以遊戲作媒介，讓你的孩⼦透過⾃⼰最熟
 					識的⽅法「玩出」⼼事，整理內在經驗，讓想法和感受在安全的環境下得以表達。<br><br>
@@ -179,7 +179,7 @@
 					🔶 每完成⼀期均會和家長進⾏詳細諮詢，傾談重點及跟進⽅向(可選⾯談/zoom)
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/⼀對⼀兒童為本遊戲輔導"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢一對一兒童為本遊戲輔導"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				
@@ -217,10 +217,8 @@
 				</div>
 
 				<div class="col-md-4 agile-footer-grid">
-					<span><b>星期二至日</b> 09:00 - 18:00</span>
-					<br><br>
-					<span><b>星期一</b> 休息</span>
-					<br><br>
+					<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+					<span><b>星期一</b> 休息</span><br>
 					<span><b>敬請預約</b></span>
 				</div>
 
