--- a/our-services/intervention.html
+++ b/our-services/intervention.html
@@ -161,10 +161,10 @@
 			</div>
 
 			<div>
-				<h4>*諾道皇牌課程 A-PLUS：不⼀樣的密集訓練班*</h4>
-				<p>🚀 諾道為你重新定義密集訓練班</p>
 				<br>
-				<p><b id="treatment">A-PLUS是諾道的皇牌課程：8⼤特點，為孩⼦提供不⼀樣的密集訓練班！</b><br><br>
+				<h4><img src="../images/o0.png"><b id="treatment"> 諾道皇牌課程 A-PLUS：不⼀樣的密集訓練班</b></h4>
+				<p>🚀 諾道為你重新定義密集訓練班</p>
+				<p> A-PLUS是諾道的皇牌課程：8⼤特點，為孩⼦提供不⼀樣的密集訓練班！<br><br>
 					🔶 ⾔語治療師＋註冊社⼯策劃及帶領<br>
 					🔶 ⾼⼈⼿比例(1對2)，確保你的孩⼦每分每秒都有所得著<br>
 					🔶 每星期30分鐘1對1⾔語治療<br>
@@ -177,11 +177,11 @@
 					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/諾道皇牌課程"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢A-PLUS密集訓練班"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><img src="../images/o1.png"><b id="treatment1">個別⾔語治療</b><br><br>
+				<p><h4><img src="../images/o1.png"><b id="treatment1"> 個別⾔語治療</b></h4><br>
 
 					諾道提供全⾯的⾔語治療評估、診斷及跟進訓練，範疇涵蓋語⾔障礙(語⾔理解、語⾔表達)、⾔語障礙(發⾳、聲線、流暢度)、社交溝通障礙以及餵食和吞嚥障礙。
 					<br>
@@ -189,11 +189,11 @@
 					🔶 持3個⽉內⾔語治療評估報告可免評估<br>
 					🔶 每次治療後均會和家長傾談當節重點及跟進⽅向<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/個別⾔語治療"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢個別言語治療"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><img src="../images/o2.png"> <b id="treatment2">綜合能力提升班</b><br><br>
+				<p><h4><img src="../images/o2.png"> <b id="treatment2"> 綜合能力提升班</b></h4><br>
 
 					🔶 ⾔語治療師諮詢，註冊社⼯帶領，跨專業協助⼩朋友提升各項能⼒<br>
 					🔶 ⾼⼈⼿比例(1對2)，確保你的孩⼦每分每秒都有所得著<br>
@@ -202,11 +202,11 @@
 					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/綜合能力提升班"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢綜合能力提升班"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><img src="../images/o5.png"> <b id="treatment3">諾道非凡個別訓練</b><br><br>
+				<p><h4><img src="../images/o5.png"> <b id="treatment3"> 諾道非凡個別訓練</b></h4><br>
 
 					🚀 為你把個別訓練帶到另⼀個層次將⾔語治療及綜合能⼒訓練結合，每次課堂先由⾔語治療師提供30分鐘個別⾔語治療，
 					緊接由註冊社⼯透過45分鐘個別訓練將前者所學加以鞏固，同時提升其他發展範疇。<br><br>
@@ -217,7 +217,7 @@
 					涵蓋範疇：語⾔＋認知＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/諾道非凡個別訓練"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道非凡個別訓練"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 			</div>
@@ -252,10 +252,8 @@
 			</div>
 
 			<div class="col-md-4 agile-footer-grid">
-				<span><b>星期二至日</b> 09:00 - 18:00</span>
-				<br><br>
-				<span><b>星期一</b> 休息</span>
-				<br><br>
+				<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+				<span><b>星期一</b> 休息</span><br>
 				<span><b>敬請預約</b></span>
 			</div>
 
