--- a/our-services/prevention.html
+++ b/our-services/prevention.html
@@ -141,7 +141,7 @@
 			</div>
 
 			<div>
-				<h4>講座/培訓工作坊</h4>
+				<h4><b>講座/培訓工作坊</b></h4>
 				<p>諾道定期舉辦不同主題的講座，亦與學校及不同機構合作，提供培訓工作坊。對象包括家長、老師及從事其他專業的同工。</p>
 				<br>
 				<p>3大熱門題目：<br>
@@ -187,10 +187,8 @@
 			</div>
 
 			<div class="col-md-4 agile-footer-grid">
-				<span><b>星期二至日</b> 09:00 - 18:00</span>
-				<br><br>
-				<span><b>星期一</b> 休息</span>
-				<br><br>
+				<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+				<span><b>星期一</b> 休息</span><br>
 				<span><b>敬請預約</b></span>
 			</div>
 
