--- a/about.html
+++ b/about.html
@@ -397,10 +397,8 @@
 				</div>
 
 				<div class="col-md-4 agile-footer-grid">
-					<span><b>星期二至日</b> 09:00 - 18:00</span>
-					<br><br>
-					<span><b>星期一</b> 休息</span>
-					<br><br>
+					<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+					<span><b>星期一</b> 休息</span><br>
 					<span><b>敬請預約</b></span>
 				</div>
 
