--- a/our-services/intervention.html
+++ b/our-services/intervention.html
@@ -162,7 +162,7 @@
 
 			<div>
 				<br>
-				<h4><img src="../images/o0.png"><b id="treatment"> 諾道皇牌課程 A-PLUS：不⼀樣的密集訓練班</b></h4>
+				<h4><b id="treatment"> 諾道皇牌課程 A-PLUS：不⼀樣的密集訓練班</b></h4>
 				<p>🚀 諾道為你重新定義密集訓練班</p>
 				<p> A-PLUS是諾道的皇牌課程：8⼤特點，為孩⼦提供不⼀樣的密集訓練班！<br><br>
 					🔶 ⾔語治療師＋註冊社⼯策劃及帶領<br>
