--- a/our-services/enhancement.html
+++ b/our-services/enhancement.html
@@ -169,8 +169,8 @@
 				<hr>
 				<p><h4><img src="../images/o3_2.png"> <b id="treatment5">⼀對⼀兒童為本遊戲輔導</b></h4><br>
 
-					你和我⼩時候都喜歡玩，長⼤後卻忘記了遊戲正正是兒童表達⾃⼰最⾃然的渠道；當感到被明⽩和接納，兒童就能重新看⾒⾃⼰的能⼒。輔導以遊戲作媒介，讓你的孩⼦透過⾃⼰最熟
-					識的⽅法「玩出」⼼事，整理內在經驗，讓想法和感受在安全的環境下得以表達。<br><br>
+					你和我⼩時候都喜歡玩，長⼤後卻忘記了遊戲正正是兒童表達⾃⼰最⾃然的渠道；當感到被明⽩和接納，兒童就能重新看⾒⾃⼰的能⼒。輔導以遊戲作媒介，讓你的孩⼦透過⾃⼰最熟識的⽅法「玩出」⼼事，整理內在經驗，讓想法和感受在安全的環境下得以表達。<br><br>
+					
 					🔶 適合遇到煩惱挫折，需要情緒出⼝，缺乏安全感/能⼒感，需要提昇⾃尊⾃信或有⾏為問題之2-10歲兒童<br>
 					🔶 諾道為孩⼦打造的「特別遊戲室」內所預備的玩具都具有治療性，由諾道團隊精⼼挑選，令進入房間的每⼀位孩⼦都在充滿信任的氛圍下獲得內⼼成長的養份<br>
 					🔶 每期均由同⼀位註冊社⼯負責，確保質素及⼀致性<br>
