--- a/article/article02.html
+++ b/article/article02.html
@@ -80,9 +80,12 @@
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道服務<span class="caret"></span></a>
 											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/prevention.html">預防</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/intervention.html">治療</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/enhancement.html">提升</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/prevention.html">預防</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/intervention.html">治療</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/enhancement.html">提升</a></li>
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
@@ -131,62 +134,55 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>言語治療是甚麼? 我的孩子需要嗎?</h2>
+					<h2>從安全圈養育概念看孩⼦的需要</h2>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：1天前</p>
+					<p>已更新：2小時前</p>
 				</div>
 				<div style="text-align: center;">
-					<img src="../images/Article/article001.png" style="max-width: 100%;" />
+					<img src="../images/Article/article002.png" style="max-width: 100%;" />
 				</div>
 				<hr>
 				<div class="panel-body narrow-text">
-					言語治療這個專業在香港越來越多人認識，但仍然有很多人不知道言語治療師到底是做甚麼的。<br><br>
-					這個名稱聽起來讓人覺得言語治療師就是「教人講嘢」，然⽽事實當然不是這樣。<br><br>
-					言語治療師不是老師，也不是醫生，我們就是治療師，在香港的醫療體制下我們屬於專職醫療。職業治療師、物理治療師、聽力學家等的專業也屬於專職醫療。<br><br>
-					言語治療師主要負責預防、評估、診斷和治療兒童及成人的語言障礙、社交溝通障礙、言語障礙以及吞嚥障礙。<br><br>
-					今天我們將重點談論需要言語治療協助的孩子。簡單來說，如果你的孩子有以下四大類的需要，言語治療師都能為你提供協助。<br><br>
+					在安全圈養育的概念中，當你作為孩⼦的安全基地，⽀持他去探索，孩⼦的需要主要分為：<br><br>
+					1. 看顧我 Watch Over Me<br>
+					2. 以我為喜 Delight In Me<br>
+					3. 幫助我 Help Me<br>
+					4. 與我同樂 Enjoy With Me<br><br>
 
-					<h3><b>第一類：語言問題</b></h3>
-					語言能力可分為理解能力和表達能力兩大範疇。<br>
-					理解能力就是能不能聽懂別人說話的內容，表達能力就是能不能清晰說出自已的想法。<br><br>
-					語言障礙常見的問題包括（與同齡小孩相較）：<br>
-					<ul>
-						<li>難以明白口頭指示</li>
-						<li>答非所問</li>
-						<li>詞彙量少，詞不達意</li>
-						<li>難以掌握複雜的句式，語句過於簡短或出現文法錯誤</li>
-						<li>組織能力弱，未能清楚敘述事情</li>
-					</ul>
-					<br>
-					<h3><b>第二類：言語問題</b></h3>
-					言語障礙可分為以下三類。<br><br>
+					<h4><b>看顧我 Watch Over Me：</b></h4>
+					有時孩⼦只需要你「在這裡」，不需要做些甚麼，但其實因著你的陪伴，他能安⼼⾛出去探索、學習 。<br><br>
 
-					<b><u>發音問題</u></b><br>
-					每個年齡層都有相應能掌握的語音，有些孩子語言能力沒有問題，但是因為先天或後天原因導致發音不準確，影響說話清晰度。<br><br>
+					<h4><b>以我為喜 Delight In Me：</b></h4>
+					讓孩⼦知道，你因為有他所以感到欣喜、感到快樂，不因為甚麼，不因為他在某件事情上做得好，只因為，你有他︔ 當孩⼦知道「你喜歡他這個⼈」，會幫助他建⽴內在的⾃我價值，這份價值並不建基於任何「外在」或「他做的事情」，只因為「他是他」。<br><br>
 
-					<b><u>聲線問題</u></b><br>
-					即是嗓音出現問題，有些孩子說話時聲量過大或過小、音調過⾼或過低，或者因經常大叫導致聲音沙啞。<br><br>
+					<h4><b>幫助我 Help Me：</b></h4>
+					剛剛好的幫助，不多不少，讓孩⼦在探索時得到你的⽀持。<br><br>
 
-					<b><u>說話流暢度問題</u></b><br>
-					這就是我們平時說的口吃、口窒窒、漏口。常見的臨床表現包括重複字詞，不適當地延長語音或在句子中間停頓。<br><br>
+					<h4><b>與我同樂 Enjoy With Me：</b></h4>
+					讓孩⼦感受到你對他做的事情都有興趣，投入地和他⼀起玩，享受當刻。<br>
+					⽽當孩⼦回到你身邊時，可能是感到疲倦、害怕、或是需要你填滿他的情緒杯，這時候孩⼦的需要主要分為：<br><br>
+					1. 保護我 Protect Me<br>
+					2. 安慰我 Comfort Me<br>
+					3. 以我為喜 Delight In Me<br>
+					4. 調整我的情緒 Organize My Feelings<br><br>
 
-					<h3><b>第三類：社交溝通問題</b></h3>
-					語言能力除了理解能力和表達能力，還有我們所說的「語用」，即是運用語言的能力。這就關係到社交溝通層面。<br><br>
+					<h4><b>保護我 Protect Me：</b></h4>
+					⼦女會有黏著你、對外⾯世界感到害怕的時候，這就是「保護我」時刻。要讓孩⼦知道，你會⽤你的⽅法盡全⼒保護他身⼼︔這份安全感非常重要，否則孩⼦即使身處安全環境，⼼中都會不踏實、缺乏安全感。<br><br>
 
-					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to say it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
-					有些孩子既懂得說話，發音亦準確，但他們總是不懂得在恰當的場合(when)，以適當的方式(how)說合宜的內容(what)。<br><br>
-					例如媽媽說：「真係俾你激死！」小朗回應：「你都無死到。」這些情況不是把人氣死，就是令人非常尷尬！要是小朗不是駁嘴的話，很可能他有語言障礙，是運用語言方面出了問題，導致社交溝通障礙。<br><br>
-					說到這裡可能你也會想到自閉症的孩子，的⽽且確社交溝通是自閉症孩子會遇到明顯困難的範疇，言語治療師會透過適當的社交技巧訓練協助孩子處理社交問題。<br><br>
+					<h4><b>安慰我 Comfort Me：</b></h4>
+					孩⼦⼀⽇之中會經歷不同的情緒感受。當來到你身邊時帶著愉悅、快樂的情緒，當然沒⼤問題︔但當孩⼦帶著嬲惱、喪氣的情緒回到你身邊，需要你的安慰，你又能否承接他的情緒，成為他的安全基地︖<br><br>
 
-					<h3><b>第四類：口肌及吞嚥問題</b></h3>
-					口肌即口部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還有進食。<br><br>
+					<h4><b>以我為喜 Delight In Me：</b></h4>
+					知道⾃⼰「被⼈喜愛」為孩⼦的內⼼注入養份，這個需要無論我們是在⽀持孩⼦去探索或是歡迎他回到身邊時，都⼗分重要。<br><br>
 
-					吞嚥困難是指食物或飲料由口腔到咽喉、食道再到達胃部的過程中，因任何原因引起的障礙。<br><br>
-					孩子未能順利進食的原因有很多，好像因先天疾病(例如：兔唇裂顎)引致的結構問題，又或後天因素引起(例如：受⽗母等家庭成員的習慣影響)。言語治療師會透過吞嚥訓練及調節餐類等等的方法幫助孩子安全進食。<br><br>
+					<h4><b>調整我的情緒 Organize My Feelings</b></h4>
+					讓孩⼦知道，他不需要獨⾃⾯對情緒。爸爸媽媽的「同在」讓他學習到情緒是可以分享的。當孩⼦需要我們幫助他了解⾃⼰當刻的情緒時，他慢慢從「被接納」學會「接納」各式各樣的情緒，這份學習將助他在成長路上無論經歷甚麼情緒，都不那麼容易被壓垮。
+					<br><br>
+					參考資料：安全圈養育課程© 引導者⼿冊
+					<br><br>
+					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。
+					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
 
-					<h3><b>總結</b></h3>
-					這篇文章簡介言語治療的範疇，並不包括所有言語治療師會處理的問題。同時，要知道每個孩子的情況都獨一無二，如果你對孩子的發展有懷疑或擔心的地方，盡快帶孩子找言語治療師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩子成長最好。<br><br>
-					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。 如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
 				</div>
 			</div>
 			<!-- //article -->
