--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="about.html#therapist">言語治療師</a></li>
-												<li><a class="hvr-bounce-to-bottom" 
-													href="about.html#worker">註冊社工</a>
+												<li><a class="hvr-bounce-to-bottom" href="about.html#worker">註冊社工</a>
 												</li>
 												<li><a class="hvr-bounce-to-bottom"
 														href="about.html#psychologist">教育心理學家</a></li>
@@ -119,8 +118,10 @@
 								&nbsp&nbsp
 								<li><a href="mailto:info@prowayst.com"><img src="images/mail.png"></i></a></li>
 								&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img src="images/facebook.png"></a></li>&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img src="images/instagram.png"></a></li>
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img
+											src="images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img
+											src="images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -208,6 +209,51 @@
 			</div>
 			<!-- for section -->
 			<div class="row">
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article03.html">
+								<img src="images/Article/article00_003.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">⾃閉症的警號</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 102 </i>
+									<i class="fa fa-heart-o"> 28 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+					<!-- Repeat this block for each card -->
+					<div class="col-md-4">
+						<div class="card">
+							<div class="image-container">
+								<a href="article/article02.html">
+									<img src="images/Article/article00_002.png" alt="Card image">
+									<div class="line"></div>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">從安全圈養育概念看孩子的需要</h5>
+								</a>
+								<p class="card-text">撰⽂：諾道團隊</p>
+								<div class="icon-row">
+									<i class="fa fa-clock-o left"> 4分鐘 </i>
+									<div class="right">
+										<i class="fa fa-eye"> 58 </i>
+										<i class="fa fa-heart-o"> 36 </i>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				<!-- Repeat this block for each card -->
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
@@ -229,20 +275,9 @@
 						</div>
 					</div>
 				</div>
+			
 				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<iframe src="https://www.facebook.com/plugins/likebox.php?href=
-				https%3A%2F%2Fwww.facebook.com%2fprowayspeechtherapy&width=358&
-				colorscheme=light&show_faces=true&border_color&
-				stream=true&header=true&height=435" scrolling="yes" frameborder="0" style="border:none; overflow:hidden;
-				width:395px; height:385px; background: white;
-				float:left; " allowTransparency="true">
-						</iframe>
-					</div>
-				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
+				<!--<div class="col-md-4">
 					<div class="card">
 						<div style="display: flex; justify-content: center;">
 							<blockquote class="instagram-media"
@@ -346,7 +381,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<!-- Repeat this block for each card -->
 		</div>
 
@@ -371,18 +406,28 @@
 					<span>電話：6532 8821</span><br>
 					<span>電郵：info@prowayst.com</span>
 				</div>
-	
+
 				<div class="col-md-4 agile-footer-grid">
 					<span><b>星期二至日</b> 09:00 - 18:00</span><br>
 					<span><b>星期一</b> 休息</span><br>
 					<span><b>敬請預約</b></span>
 				</div>
-	
+
 				<div class="videos col-md-2 agile-footer-grid">
-	
+
 				</div>
-	
-				<div class="clearfix"> </div>
+
+				<!-- <div class="col-md-4">
+						<iframe src="https://www.facebook.com/plugins/likebox.php?href=
+				https%3A%2F%2Fwww.facebook.com%2fprowayspeechtherapy&width=358&
+				colorscheme=light&show_faces=true&border_color&
+				stream=true&header=true&height=435" scrolling="yes" frameborder="0" style="border:none; overflow:hidden;
+				width:395px; height:130px; background: white;
+				float:left; " allowTransparency="true">
+						</iframe>
+				</div>
+
+				<div class="clearfix"> </div> -->
 			</div>
 		</div>
 	</div>
