--- a/share.html
+++ b/share.html
@@ -135,7 +135,50 @@
 	<!-- gallery -->
 	<div class="gallery">
 		<div class="container">
-
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article03.html">
+							<img src="images/Article/article00_003.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">⾃閉症的警號</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 102 </i>
+								<i class="fa fa-heart-o"> 28 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article02.html">
+							<img src="images/Article/article00_002.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">從安全圈養育概念看孩子的需要</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 4分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 58 </i>
+								<i class="fa fa-heart-o"> 36 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
@@ -158,7 +201,7 @@
 				</div>
 			</div>
 
-			
+
 		</div>
 	</div>
 	<!-- //gallery -->
@@ -172,17 +215,17 @@
 					<span>電話：6532 8821</span><br>
 					<span>電郵：info@prowayst.com</span>
 				</div>
-	
+
 				<div class="col-md-4 agile-footer-grid">
 					<span><b>星期二至日</b> 09:00 - 18:00</span><br>
 					<span><b>星期一</b> 休息</span><br>
 					<span><b>敬請預約</b></span>
 				</div>
-	
+
 				<div class="videos col-md-2 agile-footer-grid">
-	
+
 				</div>
-	
+
 				<div class="clearfix"> </div>
 			</div>
 		</div>
