--- a/article/article03.html
+++ b/article/article03.html
@@ -80,12 +80,9 @@
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道服務<span class="caret"></span></a>
 											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom"
-														href="../our-services/prevention.html">預防</a></li>
-												<li><a class="hvr-bounce-to-bottom"
-														href="../our-services/intervention.html">治療</a></li>
-												<li><a class="hvr-bounce-to-bottom"
-														href="../our-services/enhancement.html">提升</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../our-services/prevention.html">預防</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../our-services/intervention.html">治療</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../our-services/enhancement.html">提升</a></li>
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
@@ -134,7 +131,7 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>言語治療是甚麼? 我的孩子需要嗎?</h2>
+					<h2>⾃閉症的警號</h2>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：30分鐘前</p>
 				</div>
@@ -160,62 +157,63 @@
 					如果你的孩⼦經常且持續地出現以上某些特徵，建議你盡快找專業⼈⼠為孩⼦作詳細評估。<br>
 					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助。<br>
 				</div>
-				<!-- //article -->
 			</div>
-			<!-- //single -->
-			<!-- footer -->
-			<div class="footer">
-				<div class="container">
-					<div class="agile-footer-grids">
-						<div class="col-md-4 agile-footer-grid">
-							<h4>諾道言語治療</h4>
-							<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
-							<span>電話：6532 8821</span><br>
-							<span>電郵：info@prowayst.com</span>
-						</div>
-
-						<div class="col-md-4 agile-footer-grid">
-							<span><b>星期二至日</b> 09:00 - 18:00</span><br>
-							<span><b>星期一</b> 休息</span><br>
-							<span><b>敬請預約</b></span>
-						</div>
-
-						<div class="videos col-md-2 agile-footer-grid">
-
-						</div>
-
-						<div class="clearfix"> </div>
+			<!-- //article -->
+		</div>
+		<!-- //single -->
+		<!-- footer -->
+		<div class="footer">
+			<div class="container">
+				<div class="agile-footer-grids">
+					<div class="col-md-4 agile-footer-grid">
+						<h4>諾道言語治療</h4>
+						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+						<span>電話：6532 8821</span><br>
+						<span>電郵：info@prowayst.com</span>
 					</div>
+
+					<div class="col-md-4 agile-footer-grid">
+						<span><b>星期二至日</b> 09:00 - 18:00</span><br>
+						<span><b>星期一</b> 休息</span><br>
+						<span><b>敬請預約</b></span>
+					</div>
+
+					<div class="videos col-md-2 agile-footer-grid">
+
+					</div>
+
+					<div class="clearfix"> </div>
 				</div>
 			</div>
-			<!-- //footer -->
-			<!-- copyright -->
-			<div class="agileits-w3layouts-copyright">
-				<div class="container">
-					<p>Copyright &copy; 2024.PROWAY SPEECH THERAPY All rights reserved.</p>
-				</div>
+		</div>
+		<!-- //footer -->
+		<!-- copyright -->
+		<div class="agileits-w3layouts-copyright">
+			<div class="container">
+				<p>Copyright &copy; 2024.PROWAY SPEECH THERAPY All rights reserved.</p>
 			</div>
-			<!-- //copyright -->
-			<script src="../js/SmoothScroll.min.js"></script>
-			<script type="text/javascript" src="../js/move-top.js"></script>
-			<script type="text/javascript" src="../js/easing.js"></script>
-			<!-- here stars scrolling icon -->
-			<script type="text/javascript">
-				$(document).ready(function () {
-					/*
-						var defaults = {
-						containerID: 'toTop', // fading element id
-						containerHoverID: 'toTopHover', // fading element hover id
-						scrollSpeed: 1200,
-						easingType: 'linear' 
-						};
-					*/
+		</div>
+		<!-- //copyright -->
+		<script src="../js/SmoothScroll.min.js"></script>
+		<script type="text/javascript" src="../js/move-top.js"></script>
+		<script type="text/javascript" src="../js/easing.js"></script>
+		<!-- here stars scrolling icon -->
+		<script type="text/javascript">
+			$(document).ready(function () {
+				/*
+					var defaults = {
+					containerID: 'toTop', // fading element id
+					containerHoverID: 'toTopHover', // fading element hover id
+					scrollSpeed: 1200,
+					easingType: 'linear' 
+					};
+				*/
 
-					$().UItoTop({ easingType: 'easeOutQuart' });
+				$().UItoTop({ easingType: 'easeOutQuart' });
 
-				});
-			</script>
-			<!-- //here ends scrolling icon -->
+			});
+		</script>
+		<!-- //here ends scrolling icon -->
 </body>
 
 </html>
