--- a/article/article01.html
+++ b/article/article01.html
@@ -186,7 +186,8 @@
 
 					<h3><b>總結</b></h3>
 					這篇文章簡介言語治療的範疇，並不包括所有言語治療師會處理的問題。同時，要知道每個孩子的情況都獨一無二，如果你對孩子的發展有懷疑或擔心的地方，盡快帶孩子找言語治療師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩子成長最好。<br><br>
-					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。 如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
+					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。 <br>
+					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
 				</div>
 			</div>
 			<!-- //article -->
