--- a/article/article02.html
+++ b/article/article02.html
@@ -159,7 +159,7 @@
 					剛剛好的幫助，不多不少，讓孩⼦在探索時得到你的⽀持。<br><br>
 
 					<h4><b>與我同樂 Enjoy With Me：</b></h4>
-					讓孩⼦感受到你對他做的事情都有興趣，投入地和他⼀起玩，享受當刻。<br>
+					讓孩⼦感受到你對他做的事情都有興趣，投入地和他⼀起玩，享受當刻。<br><br>
 					⽽當孩⼦回到你身邊時，可能是感到疲倦、害怕、或是需要你填滿他的情緒杯，這時候孩⼦的需要主要分為：<br><br>
 					1. 保護我 Protect Me<br>
 					2. 安慰我 Comfort Me<br>
@@ -175,12 +175,12 @@
 					<h4><b>以我為喜 Delight In Me：</b></h4>
 					知道⾃⼰「被⼈喜愛」為孩⼦的內⼼注入養份，這個需要無論我們是在⽀持孩⼦去探索或是歡迎他回到身邊時，都⼗分重要。<br><br>
 
-					<h4><b>調整我的情緒 Organize My Feelings</b></h4>
+					<h4><b>調整我的情緒 Organize My Feelings:</b></h4>
 					讓孩⼦知道，他不需要獨⾃⾯對情緒。爸爸媽媽的「同在」讓他學習到情緒是可以分享的。當孩⼦需要我們幫助他了解⾃⼰當刻的情緒時，他慢慢從「被接納」學會「接納」各式各樣的情緒，這份學習將助他在成長路上無論經歷甚麼情緒，都不那麼容易被壓垮。
 					<br><br>
 					參考資料：安全圈養育課程© 引導者⼿冊
 					<br><br>
-					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。
+					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。<br>
 					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
 
 				</div>
