--- a/article/article02.html
+++ b/article/article02.html
@@ -175,7 +175,7 @@
 					<h4><b>以我為喜 Delight In Me：</b></h4>
 					知道⾃⼰「被⼈喜愛」為孩⼦的內⼼注入養份，這個需要無論我們是在⽀持孩⼦去探索或是歡迎他回到身邊時，都⼗分重要。<br><br>
 
-					<h4><b>調整我的情緒 Organize My Feelings:</b></h4>
+					<h4><b>調整我的情緒 Organize My Feelings：</b></h4>
 					讓孩⼦知道，他不需要獨⾃⾯對情緒。爸爸媽媽的「同在」讓他學習到情緒是可以分享的。當孩⼦需要我們幫助他了解⾃⼰當刻的情緒時，他慢慢從「被接納」學會「接納」各式各樣的情緒，這份學習將助他在成長路上無論經歷甚麼情緒，都不那麼容易被壓垮。
 					<br><br>
 					參考資料：安全圈養育課程© 引導者⼿冊
