--- a/our-services/enhancement.html
+++ b/our-services/enhancement.html
@@ -175,7 +175,7 @@
 					🔶 諾道為孩⼦打造的「特別遊戲室」內所預備的玩具都具有治療性，由諾道團隊精⼼挑選，令進入房間的每⼀位孩⼦都在充滿信任的氛圍下獲得內⼼成長的養份<br>
 					🔶 每期均由同⼀位註冊社⼯負責，確保質素及⼀致性<br>
 					🔶 輔導過程需要家長⾼度參與，令遊戲輔導更能協助孩⼦⾯對⽇常挑戰和壓⼒<br>
-					🔶 ⽗⺟需於⼦女進⾏第⼀次遊戲輔導前，與註冊社⼯進⾏⼤約1⼩時詳細諮詢，以瞭解⼩朋友情況(可選⾯談/zoom)<br>
+					🔶 ⽗⺟需於⼦女進⾏第⼀次遊戲輔導前，與註冊社⼯進⾏⼤約1⼩時詳細諮詢，以了解⼩朋友情況(可選⾯談/zoom)<br>
 					🔶 每完成⼀期均會和家長進⾏詳細諮詢，傾談重點及跟進⽅向(可選⾯談/zoom)
 					<br>
 					<br>
