--- a/article/article03.html
+++ b/article/article03.html
@@ -133,7 +133,7 @@
 				<div class="narrow-text">
 					<h2>⾃閉症的警號</h2>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：30分鐘前</p>
+					<p>已更新：7日前</p>
 				</div>
 				<div style="text-align: center;">
 					<img src="../images/Article/article003.png" style="max-width: 100%;" />
