--- a/article/article04.html
+++ b/article/article04.html
@@ -80,9 +80,12 @@
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道服務<span class="caret"></span></a>
 											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/prevention.html">預防</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/intervention.html">治療</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/enhancement.html">提升</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/prevention.html">預防</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/intervention.html">治療</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/enhancement.html">提升</a></li>
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
@@ -131,63 +134,60 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>言語治療是甚麼? 我的孩子需要嗎?</h2>
+					<h2>「愛之語」Love Language - 孩⼦感受到你的愛嗎︖</h2>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：多日前</p>
+					<p>已更新：15分鐘前</p>
 				</div>
 				<div style="text-align: center;">
-					<img src="../images/Article/article001.png" style="max-width: 100%;" />
+					<img src="../images/Article/article004.png" style="max-width: 100%;" />
 				</div>
 				<hr>
 				<div class="panel-body narrow-text">
-					言語治療這個專業在香港越來越多人認識，但仍然有很多人不知道言語治療師到底是做甚麼的。<br><br>
-					這個名稱聽起來讓人覺得言語治療師就是「教人講嘢」，然⽽事實當然不是這樣。<br><br>
-					言語治療師不是老師，也不是醫生，我們就是治療師，在香港的醫療體制下我們屬於專職醫療。職業治療師、物理治療師、聽力學家等的專業也屬於專職醫療。<br><br>
-					言語治療師主要負責預防、評估、診斷和治療兒童及成人的語言障礙、社交溝通障礙、言語障礙以及吞嚥障礙。<br><br>
-					今天我們將重點談論需要言語治療協助的孩子。簡單來說，如果你的孩子有以下四大類的需要，言語治療師都能為你提供協助。<br><br>
+					愛是⼈類最基本的需求，在每個⼈內⼼都有個「情緒的箱⼦」需要⽤愛來填滿。<br>
+					
+					對於年幼的孩⼦，「情緒的箱⼦」能否被填滿與健康成長有著莫⼤關係。當孩⼦被愛的需求得到滿⾜時，其安全感、⾃我價值感及⾃尊感也會提升，讓他有勇氣探索世界、⾯對成長的挑戰，並願意以正⾯的⾏為來回應他⼈的愛。相反，⼀旦「情緒的箱⼦」經常是等著被填滿，由於希望但並未得到成⼈的關注，便容易出現我們眼中的「問題⾏為」︔長時間下來，孩⼦內⼼會產⽣對⾃我價值的懷疑，為成長帶來負⾯影響。
+					<br><br>
 
-					<h3><b>第一類：語言問題</b></h3>
-					語言能力可分為理解能力和表達能力兩大範疇。<br>
-					理解能力就是能不能聽懂別人說話的內容，表達能力就是能不能清晰說出自已的想法。<br><br>
-					語言障礙常見的問題包括（與同齡小孩相較）：<br>
-					<ul>
-						<li>難以明白口頭指示</li>
-						<li>答非所問</li>
-						<li>詞彙量少，詞不達意</li>
-						<li>難以掌握複雜的句式，語句過於簡短或出現文法錯誤</li>
-						<li>組織能力弱，未能清楚敘述事情</li>
-					</ul>
+					<h4><b>那到底該如何愛孩⼦︖</b></h4><br>
+					真愛是無條件的，即是完全的愛︔代表⽗母接納並肯定孩⼦原來的樣⼦。無論孩⼦做什麼或不做什麼，⽗母仍然選擇愛他，即便不完全贊同他所有的⾏為。現實是，我們容易不為意地向孩⼦表達了有條件的愛，即讚賞是建基於孩⼦的⾏為︔例如他表現傑出時才會得到嘉許或獎勵，這樣孩⼦感受不到真正被愛，久⽽久之會令其⾃我價值降低，漸漸失去安全感。
+					<br><br>
+					要讓孩⼦接收到來⾃你無條件的愛，就要說對孩⼦的「愛之語」，才能與他連結起來。每個孩⼦都有⾃⼰獨有傳達及感受愛的⽅式，若家長能⽤對孩⼦的「愛之語」，所付出的愛將有加倍效果。「愛之語」可分為五種：
+					<br><br>
+					<h4><b>第⼀種：精⼼的時刻</b></h4><br>
+					⼀段完全專注於彼此的時間，⽤⼼陪伴<br>
+					例⼦：放下⼿機⼀起吃飯<br><br>
+
+					<h4><b>第⼆種：肯定的⾔詞</b></h4><br>
+					⽤具體的⿎勵或讚美說話來肯定對⽅<br>
+					例⼦：「你幫忙做家務，真是⼀個細⼼又幫得⼿的孩⼦！」<br><br>
+
+					<h4><b>第三種：貼⼼的禮物</b></h4><br>
+					送贈符合對⽅需要的禮物，可以是有形或無形的<br>
+					例⼦：顏⾊筆⽤完了，媽媽為仔仔購買⼀盒新的<br><br>
+
+					<h4><b>第四種：服務的⾏動</b></h4><br>					
+					為對⽅做⼀件事，哪怕是微⼩的舉動<br>
+					例⼦：平⽇忙於⼯作的爸爸為孩⼦煮⼀頓飯<br><br>
+
+					<h4><b>第五種：身體的接觸</b></h4><br>
+					友善的肢體觸碰去傳達愛、安撫、安全感<br>
+					例⼦：每天睡前擁抱1分鐘<br><br>
+
+					你可嘗試⽤以下兩種⽅式來找出你孩⼦的主要「愛之語」<br>
+					1. 多觀察孩⼦最常向⼈表達愛的⽅式<br>
+					2. 想想孩⼦最常向你提出什麼要求。他喜歡擁抱、拖⼿(身體的接觸)?希望你陪他玩(精⼼的時刻)?還是渴望聽到你的讚賞(肯定的⾔詞)?
+					<br><br>
+
+					當找到孩⼦主要的「愛之語」後，不防持續透過這些⽅式表達愛。當然，其他的「愛之語」都可運⽤在孩⼦身上，這樣既可讓孩⼦學習更多愛的⽅式，也可建⽴更親密的親⼦關係。
+					<br><br>
+					當「情緒的箱⼦」被填得滿滿時，孩⼦對於接受家長的教導會有更⾼的認同感。管教是出於愛，所以管教其實是愛的⾏動。孩⼦愈覺得被愛，管教孩⼦也愈容易。下⼀次，在⾯對孩⼦的「問題⾏為」時，先問問⾃⼰：「孩⼦⾏為背後的需要是什麼︖」、「他的情緒箱⼦是否快空了︖」當了解到孩⼦的需要，就先花時間與孩⼦相處，向他表達「愛之語」，再來做管教的⼯作吧！
+
+					<br><br>
+					參考資料：蓋瑞‧巧⾨與羅斯．⽢伯（2000）。《兒童愛之語—打開親⼦愛的頻道》。中國主⽇學協會出版部
+					<br><br>
+					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。
 					<br>
-					<h3><b>第二類：言語問題</b></h3>
-					言語障礙可分為以下三類。<br><br>
-
-					<b><u>發音問題</u></b><br>
-					每個年齡層都有相應能掌握的語音，有些孩子語言能力沒有問題，但是因為先天或後天原因導致發音不準確，影響說話清晰度。<br><br>
-
-					<b><u>聲線問題</u></b><br>
-					即是嗓音出現問題，有些孩子說話時聲量過大或過小、音調過⾼或過低，或者因經常大叫導致聲音沙啞。<br><br>
-
-					<b><u>說話流暢度問題</u></b><br>
-					這就是我們平時說的口吃、口窒窒、漏口。常見的臨床表現包括重複字詞，不適當地延長語音或在句子中間停頓。<br><br>
-
-					<h3><b>第三類：社交溝通問題</b></h3>
-					語言能力除了理解能力和表達能力，還有我們所說的「語用」，即是運用語言的能力。這就關係到社交溝通層面。<br><br>
-
-					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to say it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
-					有些孩子既懂得說話，發音亦準確，但他們總是不懂得在恰當的場合(when)，以適當的方式(how)說合宜的內容(what)。<br><br>
-					例如媽媽說：「真係俾你激死！」小朗回應：「你都無死到。」這些情況不是把人氣死，就是令人非常尷尬！要是小朗不是駁嘴的話，很可能他有語言障礙，是運用語言方面出了問題，導致社交溝通障礙。<br><br>
-					說到這裡可能你也會想到自閉症的孩子，的⽽且確社交溝通是自閉症孩子會遇到明顯困難的範疇，言語治療師會透過適當的社交技巧訓練協助孩子處理社交問題。<br><br>
-
-					<h3><b>第四類：口肌及吞嚥問題</b></h3>
-					口肌即口部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還有進食。<br><br>
-
-					吞嚥困難是指食物或飲料由口腔到咽喉、食道再到達胃部的過程中，因任何原因引起的障礙。<br><br>
-					孩子未能順利進食的原因有很多，好像因先天疾病(例如：兔唇裂顎)引致的結構問題，又或後天因素引起(例如：受⽗母等家庭成員的習慣影響)。言語治療師會透過吞嚥訓練及調節餐類等等的方法幫助孩子安全進食。<br><br>
-
-					<h3><b>總結</b></h3>
-					這篇文章簡介言語治療的範疇，並不包括所有言語治療師會處理的問題。同時，要知道每個孩子的情況都獨一無二，如果你對孩子的發展有懷疑或擔心的地方，盡快帶孩子找言語治療師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩子成長最好。<br><br>
-					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。 <br>
-					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
+					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！
 				</div>
 			</div>
 			<!-- //article -->
