--- a/share.html
+++ b/share.html
@@ -139,6 +139,28 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article04.html">
+							<img src="images/Article/article004.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">「愛之語」Love Language - 孩⼦感受到你的愛嗎︖</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 5分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 89 </i>
+								<i class="fa fa-heart-o"> 33 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article03.html">
 							<img src="images/Article/article003.png" alt="Card image">
 							<div class="line"></div>
