--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 									<div class="line"></div>
 							</div>
 							<div class="card-body">
-								<h5 class="card-title">⾃閉症的警號</h5>
+								<h5 class="card-title">⾃閉症的警號</h5> <br>
 								</a>
 								<p class="card-text">撰⽂：諾道團隊</p>
 								<div class="icon-row">
@@ -262,7 +262,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">從安全圈養育概念看孩子的需要</h5>
+							<h5 class="card-title">從安全圈養育概念看孩子的需要</h5> <br>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
