--- a/article/article04.html
+++ b/article/article04.html
@@ -148,28 +148,28 @@
 					對於年幼的孩⼦，「情緒的箱⼦」能否被填滿與健康成長有著莫⼤關係。當孩⼦被愛的需求得到滿⾜時，其安全感、⾃我價值感及⾃尊感也會提升，讓他有勇氣探索世界、⾯對成長的挑戰，並願意以正⾯的⾏為來回應他⼈的愛。相反，⼀旦「情緒的箱⼦」經常是等著被填滿，由於希望但並未得到成⼈的關注，便容易出現我們眼中的「問題⾏為」︔長時間下來，孩⼦內⼼會產⽣對⾃我價值的懷疑，為成長帶來負⾯影響。
 					<br><br>
 
-					<h4><b>那到底該如何愛孩⼦︖</b></h4><br>
+					<h4><b>那到底該如何愛孩⼦︖</b></h4>
 					真愛是無條件的，即是完全的愛︔代表⽗母接納並肯定孩⼦原來的樣⼦。無論孩⼦做什麼或不做什麼，⽗母仍然選擇愛他，即便不完全贊同他所有的⾏為。現實是，我們容易不為意地向孩⼦表達了有條件的愛，即讚賞是建基於孩⼦的⾏為︔例如他表現傑出時才會得到嘉許或獎勵，這樣孩⼦感受不到真正被愛，久⽽久之會令其⾃我價值降低，漸漸失去安全感。
 					<br><br>
 					要讓孩⼦接收到來⾃你無條件的愛，就要說對孩⼦的「愛之語」，才能與他連結起來。每個孩⼦都有⾃⼰獨有傳達及感受愛的⽅式，若家長能⽤對孩⼦的「愛之語」，所付出的愛將有加倍效果。「愛之語」可分為五種：
 					<br><br>
-					<h4><b>第⼀種：精⼼的時刻</b></h4><br>
+					<h4><b>第⼀種：精⼼的時刻</b></h4>
 					⼀段完全專注於彼此的時間，⽤⼼陪伴<br>
 					例⼦：放下⼿機⼀起吃飯<br><br>
 
-					<h4><b>第⼆種：肯定的⾔詞</b></h4><br>
+					<h4><b>第⼆種：肯定的⾔詞</b></h4>
 					⽤具體的⿎勵或讚美說話來肯定對⽅<br>
 					例⼦：「你幫忙做家務，真是⼀個細⼼又幫得⼿的孩⼦！」<br><br>
 
-					<h4><b>第三種：貼⼼的禮物</b></h4><br>
+					<h4><b>第三種：貼⼼的禮物</b></h4>
 					送贈符合對⽅需要的禮物，可以是有形或無形的<br>
 					例⼦：顏⾊筆⽤完了，媽媽為仔仔購買⼀盒新的<br><br>
 
-					<h4><b>第四種：服務的⾏動</b></h4><br>					
+					<h4><b>第四種：服務的⾏動</b></h4>				
 					為對⽅做⼀件事，哪怕是微⼩的舉動<br>
 					例⼦：平⽇忙於⼯作的爸爸為孩⼦煮⼀頓飯<br><br>
 
-					<h4><b>第五種：身體的接觸</b></h4><br>
+					<h4><b>第五種：身體的接觸</b></h4>
 					友善的肢體觸碰去傳達愛、安撫、安全感<br>
 					例⼦：每天睡前擁抱1分鐘<br><br>
 
