--- a/article/article04.html
+++ b/article/article04.html
@@ -134,7 +134,7 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>「愛之語」Love Language - 孩⼦感受到你的愛嗎︖</h2>
+					<h2>「愛之語」Love Language - 孩⼦感受到你的愛嗎 ?</h2>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：15分鐘前</p>
 				</div>
