--- a/article/article04.html
+++ b/article/article04.html
@@ -134,7 +134,7 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>「愛之語」Love Language - 孩⼦感受到你的愛嗎 ?</h2>
+					<h2>「愛之語」Love Language - 孩⼦感受到你的愛嗎?</h2>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：15分鐘前</p>
 				</div>
@@ -148,7 +148,7 @@
 					對於年幼的孩⼦，「情緒的箱⼦」能否被填滿與健康成長有著莫⼤關係。當孩⼦被愛的需求得到滿⾜時，其安全感、⾃我價值感及⾃尊感也會提升，讓他有勇氣探索世界、⾯對成長的挑戰，並願意以正⾯的⾏為來回應他⼈的愛。相反，⼀旦「情緒的箱⼦」經常是等著被填滿，由於希望但並未得到成⼈的關注，便容易出現我們眼中的「問題⾏為」︔長時間下來，孩⼦內⼼會產⽣對⾃我價值的懷疑，為成長帶來負⾯影響。
 					<br><br>
 
-					<h4><b>那到底該如何愛孩⼦︖</b></h4>
+					<h4><b>那到底該如何愛孩⼦?</b></h4>
 					真愛是無條件的，即是完全的愛︔代表⽗母接納並肯定孩⼦原來的樣⼦。無論孩⼦做什麼或不做什麼，⽗母仍然選擇愛他，即便不完全贊同他所有的⾏為。現實是，我們容易不為意地向孩⼦表達了有條件的愛，即讚賞是建基於孩⼦的⾏為︔例如他表現傑出時才會得到嘉許或獎勵，這樣孩⼦感受不到真正被愛，久⽽久之會令其⾃我價值降低，漸漸失去安全感。
 					<br><br>
 					要讓孩⼦接收到來⾃你無條件的愛，就要說對孩⼦的「愛之語」，才能與他連結起來。每個孩⼦都有⾃⼰獨有傳達及感受愛的⽅式，若家長能⽤對孩⼦的「愛之語」，所付出的愛將有加倍效果。「愛之語」可分為五種：
@@ -180,7 +180,7 @@
 
 					當找到孩⼦主要的「愛之語」後，不防持續透過這些⽅式表達愛。當然，其他的「愛之語」都可運⽤在孩⼦身上，這樣既可讓孩⼦學習更多愛的⽅式，也可建⽴更親密的親⼦關係。
 					<br><br>
-					當「情緒的箱⼦」被填得滿滿時，孩⼦對於接受家長的教導會有更⾼的認同感。管教是出於愛，所以管教其實是愛的⾏動。孩⼦愈覺得被愛，管教孩⼦也愈容易。下⼀次，在⾯對孩⼦的「問題⾏為」時，先問問⾃⼰：「孩⼦⾏為背後的需要是什麼︖」、「他的情緒箱⼦是否快空了︖」當了解到孩⼦的需要，就先花時間與孩⼦相處，向他表達「愛之語」，再來做管教的⼯作吧！
+					當「情緒的箱⼦」被填得滿滿時，孩⼦對於接受家長的教導會有更⾼的認同感。管教是出於愛，所以管教其實是愛的⾏動。孩⼦愈覺得被愛，管教孩⼦也愈容易。下⼀次，在⾯對孩⼦的「問題⾏為」時，先問問⾃⼰：「孩⼦⾏為背後的需要是什麼?」、「他的情緒箱⼦是否快空了?」當了解到孩⼦的需要，就先花時間與孩⼦相處，向他表達「愛之語」，再來做管教的⼯作吧！
 
 					<br><br>
 					參考資料：蓋瑞‧巧⾨與羅斯．⽢伯（2000）。《兒童愛之語—打開親⼦愛的頻道》。中國主⽇學協會出版部
