--- a/article/article02.html
+++ b/article/article02.html
@@ -136,7 +136,7 @@
 				<div class="narrow-text">
 					<h2>從安全圈養育概念看孩⼦的需要</h2>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：多日前</p>
+					<p>已更新：03-06-2024</p>
 				</div>
 				<div style="text-align: center;">
 					<img src="../images/Article/article002.png" style="max-width: 100%;" />
