--- a/article/article04.html
+++ b/article/article04.html
@@ -136,7 +136,7 @@
 				<div class="narrow-text">
 					<h2>「愛之語」Love Language - 孩⼦感受到你的愛嗎?</h2>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：15分鐘前</p>
+					<p>已更新：02-07-2024</p>
 				</div>
 				<div style="text-align: center;">
 					<img src="../images/Article/article004.png" style="max-width: 100%;" />
