--- a/article/article04.html
+++ b/article/article04.html
@@ -143,7 +143,7 @@
 				</div>
 				<hr>
 				<div class="panel-body narrow-text">
-					愛是⼈類最基本的需求，在每個⼈內⼼都有個「情緒的箱⼦」需要⽤愛來填滿。<br>
+					愛是⼈類最基本的需求，在每個⼈內⼼都有個「情緒的箱⼦」需要⽤愛來填滿。<br><br>
 					
 					對於年幼的孩⼦，「情緒的箱⼦」能否被填滿與健康成長有著莫⼤關係。當孩⼦被愛的需求得到滿⾜時，其安全感、⾃我價值感及⾃尊感也會提升，讓他有勇氣探索世界、⾯對成長的挑戰，並願意以正⾯的⾏為來回應他⼈的愛。相反，⼀旦「情緒的箱⼦」經常是等著被填滿，由於希望但並未得到成⼈的關注，便容易出現我們眼中的「問題⾏為」︔長時間下來，孩⼦內⼼會產⽣對⾃我價值的懷疑，為成長帶來負⾯影響。
 					<br><br>
