--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>PROWAY SPEECH THERAPY - 諾道分享</title>
+	<title>PROWAY SPEECH THERAPY - 諾道團隊</title>
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
